// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeolocationViewer should not fail if points is just an empty array 1`] = `
<Map
  autoCenter={true}
  clickOnCluster={[Function]}
  clickOnMarker={[Function]}
  cluster={false}
  height={370}
  hoverOnMarker={[Function]}
  interactiveLayerIds={Array []}
  latitude={null}
  longitude={null}
  markers={Array []}
  onClick={[Function]}
  renderMarker={null}
  renderPopupInfo={null}
  scrollZoom={true}
  showControls={false}
  width={null}
  zoom={4}
/>
`;

exports[`GeolocationViewer should render a map with markers when onlyForCards is false, not failing on nulls 1`] = `
<Map
  autoCenter={true}
  clickOnCluster={[Function]}
  clickOnMarker={[Function]}
  cluster={false}
  height={370}
  hoverOnMarker={[Function]}
  interactiveLayerIds={Array []}
  latitude={13}
  longitude={7}
  markers={
    Array [
      Object {
        "latitude": 13,
        "longitude": 7,
        "properties": Object {
          "info": "home",
        },
      },
      Object {
        "latitude": 5,
        "longitude": 10,
        "properties": Object {
          "color": "red",
          "info": "work",
        },
      },
      Object {
        "latitude": 23,
        "longitude": 8,
        "properties": Object {
          "info": "",
        },
      },
    ]
  }
  onClick={[Function]}
  renderMarker={null}
  renderPopupInfo={null}
  scrollZoom={true}
  showControls={false}
  width={null}
  zoom={4}
/>
`;

exports[`GeolocationViewer should render the coordinate values 1`] = `
<div>
  <div
    key="0"
  >
    home: 
    13° 0′ 0″ N, 7° 0′ 0″ E
  </div>
  <div
    key="1"
  >
    work: 
    5° 0′ 0″ N, 10° 0′ 0″ E
  </div>
  <div
    key="2"
  >
    23° 0′ 0″ N, 8° 0′ 0″ E
  </div>
</div>
`;
